refactor(utils): clean and reorganize utilities into sub-packages